Fix text alignment in hero section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,11 +140,16 @@ footer {
     max-width: 55rem;
     padding-inline: 1rem;
     text-align: center;
+    padding: 0.4em 0.6em 0.4em 0.6em;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color:  rgba(0, 0, 0, 0.5);
     color: #fff;
+}
+
+#hero_style > h1 {
+    margin: 0;
 }
 
 /* Main Content */
